tests/compile-fail/integration__integration__enums__invalid_infer_in_const.snap
---
source: tests/integration/enums.rs
expression: stderr
---
error: cannot determine enum for .Name
   ┌─ <input>:22:27
   │
22 │         const int x = 2 + .Name * 2;
   │                           ^^^^^ unqualified enum const


